--- a/vet-app/src/components/home-banner/home-banner.style.scss
+++ b/vet-app/src/components/home-banner/home-banner.style.scss
@@ -73,13 +73,13 @@
 .rc-texty_title {
   color: #022902;
   font-weight: bold;
-  font-size: 58px;
-  letter-spacing: 8px !important;
+  font-size: 22px;
+  // letter-spacing: .px !important;
   overflow: hidden;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .sub-header {
-  font-size: 25px;
+  font-size: 16px;
 }
 @media screen and (min-width: 768px) {
   .banner__text {
@@ -102,11 +102,7 @@
 
   .combined {
     .content {
-      padding: 50px;
+      padding: 20px;
     }
-  }
-
-  .sub-header {
-    font-weight: bold;
   }
 }
