made good chanes

--- a/vet-app/src/components/home-banner/home-banner.style.scss
+++ b/vet-app/src/components/home-banner/home-banner.style.scss
@@ -22,7 +22,7 @@
 //tweet
 .combined-wrapper {
   padding: 2rem 0 !important;
-  background: linear-gradient(135deg, #08a30a 1%, #607d8b 100%);
+  background: linear-gradient(135deg, #b8f6b9 860%, #b9e0f4 1%);
   position: relative;
   width: 100%;
 }
