--- a/vet-app/src/components/product/product-banner.style.scss
+++ b/vet-app/src/components/product/product-banner.style.scss
@@ -1,15 +1,14 @@
 .product-banner {
-  background: linear-gradient(135deg, #08a30a 1%, #607d8b 100%);
+  background: linear-gradient(135deg, #98f19a 860%, #a4d2ea 1%);
   position: relative;
   width: 100%;
   min-height: 70vh;
-  padding-left: 1rem;
-  padding-right: 1rem;
 
   .product-content {
-    padding: 20px 0;
-    background: rgba(0, 0, 0, 0.01);
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    margin: 1rem 0;
   }
   .product-banner-text {
     text-align: center;
@@ -29,10 +28,10 @@
     box-shadow: none !important;
     div {
       height: 220px;
-      width: 220px;
+      width: 260px;
       background: #fff;
       border-radius: 20px;
-      margin: 0 20px;
+      margin: 0 15px;
       transition: all ease 0.2s;
       transform: translateY(10px);
 
@@ -54,8 +53,6 @@
     }
   }
 
-  //
-  border: 25px solid #fff;
 }
 
 .product-banner-2 {
@@ -92,7 +89,6 @@
     .product-column {
       order: 2;
     }
-    padding: 0 3rem;
   }
 
   .product-banner-2 {
@@ -105,6 +101,5 @@
     .product-column {
       order: 2;
     }
-    padding: 0 8rem;
   }
 }
