--- a/vet-app/src/components/shared/page-banner/page-banner.scss
+++ b/vet-app/src/components/shared/page-banner/page-banner.scss
@@ -1,15 +1,14 @@
 .page-banner {
-  background: linear-gradient(135deg, #08a30a 1%, #607d8b 100%);
+  background: linear-gradient(135deg, #98f19a 860%, #a4d2ea 1%);
   position: relative;
   width: 100%;
   min-height: 65vh;
-  padding-left: 1rem;
-  padding-right: 1rem;
 
   .page-content {
-    padding: 20px 0;
-    background: rgba(0, 0, 0, 0.01);
-    border-radius: 4px;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 4px; 
+    margin: 1rem 0;
   }
   .page-banner-text {
     text-align: center;
@@ -31,10 +30,10 @@
     box-shadow: none !important;
     div {
       height: 220px;
-      width: 220px;
+      width: 260px;
       background: #fff;
       border-radius: 20px;
-      margin: 0 20px;
+      margin: 0 15px;
       transition: all ease 0.2s;
       transform: translateY(10px);
 
@@ -56,7 +55,7 @@
     }
   }
 
-  border: 25px solid #fff;
+  // border: 25px solid #fff;
 }
 
 @media screen and (min-width: 768px) {
@@ -67,7 +66,7 @@
     .page-column {
       order: 2;
     }
-    padding: 0 3rem;
+    // padding: 0 3rem;
   }
 }
 
@@ -76,6 +75,6 @@
     .page-column {
       order: 2;
     }
-    padding: 0 8rem;
+    // padding: 0 8rem;
   }
 }
