--- a/vet-app/src/App.css
+++ b/vet-app/src/App.css
@@ -27,6 +27,7 @@
 .menuCon .ant-menu-item {
   padding: 0px 5px;
 }
+
 .menuCon .ant-menu-item .ant-menu-title-content a.active {
   color: #214e0a;
 }
@@ -145,4 +146,24 @@
   /* .logo a {
     padding: 10px 20px;
   } */
+}
+
+/* new */
+.gradient-title {
+  background: linear-gradient(to right, #27b025, #5a008b);
+  -webkit-background-clip: text;
+  /* This will clip the text to the gradient */
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* This will make the text transparent, showing only the gradient */
+  font-weight: bold;
+  /* Adjust font weight as needed */
+}
+
+@media (min-width: 991px) {
+  .gradient-title {
+    font-size: 2em;
+    /* Adjust font size as needed */
+
+  }
 }
