update: add services and fix appointments

--- a/vet-app/src/components/home-banner/home-banner.style.scss
+++ b/vet-app/src/components/home-banner/home-banner.style.scss
@@ -17,12 +17,12 @@
     object-fit: cover;
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0 50%);
   }
-}
+} 
 
 //tweet
 .combined-wrapper {
   padding: 2rem 0 !important;
-  background: linear-gradient(135deg, #b8f6b9 860%, #b9e0f4 1%);
+  background: linear-gradient(135deg, #b8f6b9 860%, #dcadf6 1%);
   position: relative;
   width: 100%;
 }
