--- a/vet-app/src/components/post/post.style.scss
+++ b/vet-app/src/components/post/post.style.scss
@@ -1,4 +1,8 @@
 .post-card {
+  padding-right: 4px;
+  text-overflow: ellipsis;
+  white-space: wrap;
+
   img {
     height: 250px !important;
     max-width: 100% !important;
@@ -50,11 +54,5 @@
     .post-detail-img {
       height: inherit;
     }
-  }
-}
-
-@media screen and (min-width: 991px) {
-  .post-list {
-    margin: 0 2rem;
   }
 }
