updates: complete updates

--- a/vet-app/src/layout/app/AppShell.scss
+++ b/vet-app/src/layout/app/AppShell.scss
@@ -17,8 +17,8 @@
 
 .app-footer {
   // margin-top: 2rem;
-  // padding: 5.5rem 2rem 0 2rem !important;
-  background: linear-gradient(135deg, #d6efd6 1%, #97c482 100%) !important;
+  padding: 5.5rem 2rem 0 2rem !important;
+  background: linear-gradient(135deg, #f1afcc 1%, #bfefbf 100%) !important;
   // position: relative;
   // width: 100%;
 }
