--- a/vet-app/src/index.css
+++ b/vet-app/src/index.css
@@ -1,3 +1,25 @@
+
+/* <link
+rel="stylesheet"
+type="text/css"
+charset="UTF-8"
+href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+/>
+<link
+rel="stylesheet"
+type="text/css"
+href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+/> */
+/* <link
+href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700;800&display=swap"
+rel="stylesheet"
+/> */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700;800&display=swap');
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
+
 #root {
   overflow-x: hidden;
 }
